fix scrollbar colors

--- a/static/css/classic-light.css
+++ b/static/css/classic-light.css
@@ -2,7 +2,7 @@
     --font-color-primary: black;
     --font-color-secondary: rgba(0, 0, 0, 0.5);
 
-    --scrollbar-color: initial;
+    --scrollbar-color: rgb(135, 150, 197) rgb(169, 180, 214);
     --background: rgb(135, 150, 197);
     --background-blurred-filter: none;
     --background-blurred-transform: none;
