--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -2,7 +2,7 @@
     --font-color-primary: rgb(189, 189, 189);
     --font-color-secondary: rgba(255, 255, 255, 0.5);
 
-    --scrollbar-color: rgb(23, 24, 32) rgb(7, 8, 10);
+    --scrollbar-color: #1A1A1A #0D0D0D ;
     --background: #0D0D0D;
     --background-blurred-filter: none;
     --background-blurred-transform: none;
