--- a/static/css/light.css
+++ b/static/css/light.css
@@ -2,7 +2,7 @@
     --font-color-primary: rgb(0, 0, 0);
     --font-color-secondary: rgba(0, 0, 0, 0.5);
 
-    --scrollbar-color: rgb(23, 24, 32) rgb(7, 8, 10);
+    --scrollbar-color: #F2F2F2 rgb(255, 255, 255) ;
     --background: #F2F2F2;
     --background-blurred-filter: none;
     --background-blurred-transform: none;
